Fix broken CSS & JS for FYI box

--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ main {
     width: 87%;
 }
 
+.menulisting#azent {
+    width: 87%;
+}
+
 .menulisting {
     width: 65%;
     height: 410px;
